@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix bug where subtest results were repeated
+
 0.000015  2016-05-09 08:03:51-07:00 America/Los_Angeles
 
 0.000014  2016-04-14 09:40:01-07:00 America/Los_Angeles
